fixed issue forcing horizontal scrolling on portfolio page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,11 @@
 	0%   {right: 90px;}
 	100% {right: 0px;}
 }
+/* Animate contact icons into nav bar */
+@keyframes animMovetoNav {
+	0%   {top: 0px;}
+	100% {top: -76px;}
+}
 #github {
 	animation-name: animMoveGithubStandard;
 	animation-duration: 1.5s;
@@ -14,12 +19,6 @@
 #resume {
 	animation-name: animMoveResumeStandard;
 	animation-duration: 1.5s;
-}
-
-/* Animate contact icons into nav bar */
-@keyframes animMovetoNav {
-	0%   {top: 0px;}
-	100% {top: -76px;}
 }
 #movetonav {
 	animation-name: animMovetoNav;
@@ -146,12 +145,8 @@ li {
 
 footer {
 	background-color: #666666;
-	height: 60px;
-	position: fixed;
-	bottom: 0px;
 	width: 100%;
 }
-
 .foot {
 	margin-top: 20px;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -236,7 +231,6 @@ button:hover {
     font-style: italic;
 }
 .navbar-settings {
-    position: fixed;
     margin: 0;
 }
 .navbar .nav>li>a {
@@ -255,7 +249,6 @@ button:hover {
 .footer-content {
 	color: #ffffff;
 	text-align: center;
-	padding-top: 15px;
 }
 
 .projecttitle {
@@ -299,14 +292,15 @@ input[type=text] {
 	position: relative;
 	right: 15px;
 }
+/* Prevent horizontal scrolling */
+.row.portfolio-section {
+    margin-right: 0px;
+}
 .imageCaptionRow {
     margin-top: 20px;
 }
 #profilepicture, #AboutMeImage, #aboutpagepicture, #AboutPageImage {
     display: none;
-}
-.selectFileButton {
-	
 }
 #addnewproject {
 	font-size: 26px;
